old/services/calibre-web/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web-ingress
  namespace: miscellaneous
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre.uk.msrpi.com`)
      kind: Rule
      services:
        - name: calibre-web-core
          namespace: miscellaneous
          port: 8083
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
    domains:
      - main: calibre.uk.msrpi.com
